
[package]
authors = ["Kelly Peilin Chan<kellypeilinchan@gmail.com>"]
edition = "2021"
name = "license"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
lib = { path = "./license-lib" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
